# exemplos-cmake

./: README.md
basico/: CMakeLists.txt  README.md  main.cpp
basico/src/: class1.cpp  class1.hpp  class2.cpp  class2.hpp  etc.hpp
curl/: CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt  README.md  lib.cpp  lib.hpp
multiplos/: CMakeLists.txt  README.md
multiplos/lib_curl/: CMakeLists.txt  lib_curl.cpp
multiplos/lib_curl/include/: lib_curl.hpp
multiplos/lib_pg/: CMakeLists.txt  lib_pg.cpp
multiplos/lib_pg/include/: lib_pg.hpp
multiplos/principal/: CMakeLists.txt  main.cpp
postgresql/: CMakeLists.txt  README.md  main.cpp
recursivo/: CMakeLists.txt  README.md  main.cpp
recursivo/src/etc/: etc.cpp  etc.hpp
recursivo/src/pasta1/: class1.hpp
recursivo/src/pasta1/pasta2/: class2.hpp
